--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -29,6 +29,12 @@ font-weight: 400; font-style:normal;
 
 }
 
+div.product img{
+    height: 25rem;
+    object-fit: cover;
+
+}
+
 header.cabecalho{
 background-color: var(--cor-primaria);
 padding: 1rem;
